avencement dans le developpement du front-end

--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
     </style>
 </head>
 <body>
-    <nav>
-        <div>
-            <h1>wellcome!</h1>
-        </div>
-    </nav>
+    <header class="header-area">
+        <nav class="col-12 main-nav">
+            <a class="logo" href="">
+                <h1>
+                    <span>Recipe</span>
+                    <span>Book</span>
+                </h1>
+            </a>
+            <ul class="nav">
+                <li><a href="" class="active">HOME</a></li>
+                <li><a href="">CATEGORIES</a></li>
+                <li><a href="">ADD RECIPES</a></li>
+            </ul>
+            <a class='menu-trigger'>
+                <span></span>
+            </a>
+        </nav>
+    </header>
+    <section style="margin-top: 114px;">
+        hjk
+    </section>
+    <script src="./public/js/app.js"></script>
+    
 </body>
 </html>
